gadjid/src/snapshots/gadjid__test__small-DAG03-vs-DAG04.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20003.DAG-10
g_guess: 20004.DAG-10
ancestor_aid:
  - 0.16666666666666666
  - 15
oset_aid:
  - 0.16666666666666666
  - 15
parent_aid:
  - 0.26666666666666666
  - 24
shd:
  - 0.4666666666666667
  - 21
t:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
y: 9
z:
  - 0
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 2
  - 5
  - 6
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 8
  - 9
