gadjid/src/snapshots/gadjid__test__small-DAG05-vs-DAG06.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20005.DAG-10
g_guess: 20006.DAG-10
ancestor_aid:
  - 0.25555555555555554
  - 23
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.6666666666666666
  - 60
shd:
  - 0.37777777777777777
  - 17
t:
  - 0
  - 1
  - 2
  - 4
  - 6
  - 7
  - 8
y: 9
z:
  - 3
  - 5
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 4
  - 6
  - 7
  - 8
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 5
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 5
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 5
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 3
  - 5
  - 9
