gadjid/src/snapshots/gadjid__test__small-DAG06-vs-DAG07.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20006.DAG-10
g_guess: 20007.DAG-10
ancestor_aid:
  - 0.06666666666666667
  - 6
oset_aid:
  - 0.06666666666666667
  - 6
parent_aid:
  - 0.1
  - 9
shd:
  - 0.13333333333333333
  - 6
t:
  - 8
  - 9
y: 3
z:
  - 1
  - 4
  - 5
  - 6
  - 7
possible_descendants_of_t_in_g_guess:
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 4
  - 5
  - 6
  - 7
