gadjid/src/snapshots/gadjid__test__small-DAG07-vs-DAG08.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20007.DAG-10
g_guess: 20008.DAG-10
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0
  - 0
parent_aid:
  - 0
  - 0
shd:
  - 1
  - 45
t:
  - 0
  - 1
  - 3
  - 9
y: 4
z:
  - 5
  - 6
  - 8
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
oset_for_t_onto_y_in_g_guess:
  - 3
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
not_validly_adjusted_for_in_g_guess_by_z:
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
