gadjid/src/snapshots/gadjid__test__small-DAG08-vs-DAG09.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20008.DAG-10
g_guess: 20009.DAG-10
ancestor_aid:
  - 0.7444444444444445
  - 67
oset_aid:
  - 0.7
  - 63
parent_aid:
  - 0.9444444444444444
  - 85
shd:
  - 0.8888888888888888
  - 40
t:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 6
  - 8
  - 9
y: 7
z:
  - 3
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
  - 7
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 3
  - 7
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 3
  - 7
not_validly_adjusted_for_in_g_guess_by_z:
  - 3
  - 7
