gadjid/src/snapshots/gadjid__test__small-DAG09-vs-DAG10.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20009.DAG-10
g_guess: 20010.DAG-10
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.4777777777777778
  - 43
parent_aid:
  - 0.5777777777777777
  - 52
shd:
  - 0.3333333333333333
  - 15
t:
  - 2
  - 8
y: 3
z:
  - 4
  - 7
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 4
  - 5
  - 7
  - 8
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 6
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 3
  - 6
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 3
  - 6
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 9
