gadjid/src/snapshots/gadjid__test__small-DAG1-vs-DAG2.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.DAG-10\", true_id),\n    &format!(\"200{:0>2}.DAG-10\", guess_id))"
---
g_true: 20001.DAG-10
g_guess: 20002.DAG-10
ancestor_aid:
  - 0.2222222222222222
  - 20
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.34444444444444444
  - 31
shd:
  - 0.5111111111111111
  - 23
T:
  - 0
  - 2
  - 4
  - 5
  - 7
  - 8
  - 9
NAM: []
Y: 1
random_adj:
  - 3
proper_ancestors:
  - 1
oset: []
possible_descendants:
  - 0
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
parent_adjustment_NVA:
  - 1
  - 2
  - 3
  - 4
  - 6
  - 9
ancestor_adjustment_NVA:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
nondescendant_adjustment_NVA:
  - 1
  - 3
oset_adjustment_NVA:
  - 1
  - 3
  - 6
empty_adjustment_NVA:
  - 1
  - 3
  - 6
random_Z_adjustment_NVA:
  - 1
  - 3
  - 6
