gadjid/src/snapshots/gadjid__test__small-DAG10-vs-DAG01.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 20010.DAG-10
g_guess: 20001.DAG-10
ancestor_aid:
  - 0.25555555555555554
  - 23
oset_aid:
  - 0.26666666666666666
  - 24
parent_aid:
  - 0.25555555555555554
  - 23
shd:
  - 0.28888888888888886
  - 13
t:
  - 2
  - 7
y: 0
z:
  - 1
  - 3
  - 5
  - 6
  - 8
  - 9
possible_descendants_of_t_in_g_guess:
  - 2
  - 5
  - 7
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 2
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 8
  - 9
