gadjid/src/snapshots/gadjid__test__small-DAG12-vs-DAG13.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-12
g_guess: 10-node-DAG-13
ancestor_aid:
  - 0.16666666666666666
  - 15
oset_aid:
  - 0.16666666666666666
  - 15
parent_aid:
  - 0.26666666666666666
  - 24
shd:
  - 0.4666666666666667
  - 21
t:
  - 0
  - 4
  - 5
  - 6
  - 7
  - 9
y: 8
z:
  - 1
  - 2
  - 3
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 8
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 2
  - 5
  - 6
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 2
  - 3
  - 8
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 2
  - 3
  - 8
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 2
  - 3
  - 8
